# MATRIX-Voice-with-Android-Things

./: README.md  local.properties
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/ua/zt/mezon/thingstest/thingmatrix/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/demos/: audio_output.cpp  audio_output.h  direction_of_arrival_demo_direct.cpp  direction_of_arrival_demo_direct.h  everloop_demo.cpp  everloop_demo.h  mic_energy_direct.cpp  mic_energy_direct.h  mic_fft.cpp  mic_fft.h
app/src/main/cpp/driver/: CMakeLists.txt  audio_output.cpp  audio_output.h  bus.h  bus_direct.cpp  bus_direct.h  cross_correlation.cpp  cross_correlation.h  direction_of_arrival.cpp  direction_of_arrival.h  dummy_sensor.cpp  everloop.cpp  everloop_image.h  gpio_control.cpp  matrix_driver.cpp  matrixio_bus.cpp  matrixio_bus.h  mcu_firmware.cpp  microphone_array.cpp  microphone_array.h  microphone_core.cpp  microphone_core.h  microphone_core_fir.h
app/src/main/cpp/fft/: kiss_fftr.c  qmath.c  qmath.h
app/src/main/java/ua/zt/mezon/thingstest/thingmatrix/: ActivityNavigator.java  Config.java  MainActivity.java  MainActivityPresenter.java  MainActivityPresenterImpl.java
app/src/main/java/ua/zt/mezon/thingstest/thingmatrix/adapter/: ViewPagerAdapter.java
app/src/main/java/ua/zt/mezon/thingstest/thingmatrix/fragment/: BaseFragment.java  FragControls.java  FragControlsPresenter.java  FragControlsPresenterImpl.java
app/src/main/java/ua/zt/mezon/thingstest/thingmatrix/utils/: PermissionManager.java
app/src/main/java/ua/zt/mezon/thingstest/thingmatrix/vadapters/: CustomViewPager.java
app/src/main/res/drawable/: ic_help_outline_24dp.xml
app/src/main/res/layout/: activity_main.xml  frag_control.xml
app/src/main/res/values/: attrs.xml  colors.xml  strings.xml  styles.xml
app/src/test/java/ua/zt/mezon/thingstest/thingmatrix/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
